[package]
name = "iota_rspammer"
version = "0.1.0"
authors = ["Bernardo A. Rodrigues <bernardo.araujo@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
tokio = { version = "0.2", features = ["macros", "sync"] }
GSL = "*"
