[package]
name = "iota_rspammer"
version = "0.1.1"
authors = ["Bernardo A. Rodrigues <bernardo.araujo@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev", features = ["async"] }
tokio = { version = "1.0", features = ["macros", "sync"] }
structopt = { version = "0.3", default-features = false }
url = "2.2.0"
rand = "0.8.3"
